--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ classes/databasehandler.class.php
 classes/databasehandler.class.php
 
 classes/databasehandler.class.php
+classes/databasehandler.class.php
